                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 07-08-2004 added: My Programs can now sort by most used programs
  - 06-08-2004 added: python unicodedata library to cvs (this means no more idna ecoding errors in scripts)
  - 06-08-2004 added: python scripts can now be started from my files to
  - 06-08-2004 changed: python uses the new keyboard now
  - 06-08-2004 fixed: possible memory leak in CDDARipper
  - 06-08-2004 added: python: getControl function to get access to xbmc control's
	- 06-08-2004 fixed: python: sometimes onControl / onAction was not alway's called if a button or action event occured
  - 06-08-2004 added: python: dialog window for creating custom dialogs
  - 06-08-2004 added: Different Log Levels can now be specified.  Default is NOTICE.
  - 06-08-2004 fixed: Fallback skin is now Project Mayhem and not MediaCenter
  - 06-08-2004 fixed: Only use directory name as description for default.xbe
  - 05-08-2004 fixed: Harddisk spins up when closing the OSD
  - 05-08-2004 fixed: Left + Right moves of the Right thumb stick are now picked up.
  - 05-08-2004 fixed: libmp4 debug assertion
  - 04-08-2004 fixed: New Textures.xpr
  - 04-08-2004 fixed:  New virtual keyboard added to Profile Renaming.
  - 04-08-2004 changed: keymap.xml now maps mplayer OSD toggle to SELECT on the remote
  - 03-08-2004 needed:  Textures.xpr needs repacking!
  - 03-08-2004 changed: Replaced old virtual keyboard with new skinnable one.
  - 03-08-2004 changed: Updated strings 216 and 217 (Zoom and Stretch) to make better sense.
  - 03-08-2004 removed: ACTION_ASPECT_RATIO now no longer needed.
  - 03-08-2004 changed: Zoom and Stretch are now fully controllable from the Video OSD.