@@ -241,8 +241,12 @@ namespace PYXBMC
 		return Py_None;
 	}
 
-	/* xbmc Dialog functions for use in python */
 	PyMethodDef WindowDialog_methods[] = {
+		{NULL, NULL, 0, NULL}
+	};
+
+	/* xbmc Dialog functions for use in python */
+	PyMethodDef Dialog_methods[] = {
 		{"yesno", (PyCFunction)Dialog_YesNo, METH_VARARGS, yesno__doc__},
 		{"select", (PyCFunction)Dialog_Select, METH_VARARGS, select__doc__},
 		{"ok", (PyCFunction)Dialog_OK, METH_VARARGS, ok__doc__},
@@ -259,6 +263,9 @@ namespace PYXBMC
 	};
 
 	PyDoc_STRVAR(windowDialog__doc__,
+		"WindowDialog class.\n");
+
+	PyDoc_STRVAR(dialog__doc__,
 		"Dialog class.\n");
 
 	PyDoc_STRVAR(dialogProgress__doc__,
@@ -342,6 +349,39 @@ namespace PYXBMC
 			0,		                     /* tp_iter */
 			0,		                     /* tp_iternext */
 			DialogProgress_methods,    /* tp_methods */
+			0,                         /* tp_members */
+	};
+
+	PyTypeObject Dialog_Type = {
+			PyObject_HEAD_INIT(NULL)
+			0,                         /*ob_size*/
+			"xbmcgui.Dialog",          /*tp_name*/
+			sizeof(Dialog),            /*tp_basicsize*/
+			0,                         /*tp_itemsize*/
+			0,                         /*tp_dealloc*/
+			0,                         /*tp_print*/
+			0,                         /*tp_getattr*/
+			0,                         /*tp_setattr*/
+			0,                         /*tp_compare*/
+			0,                         /*tp_repr*/
+			0,                         /*tp_as_number*/
+			0,                         /*tp_as_sequence*/
+			0,                         /*tp_as_mapping*/
+			0,                         /*tp_hash */
+			0,                         /*tp_call*/
+			0,                         /*tp_str*/
+			0,                         /*tp_getattro*/
+			0,                         /*tp_setattro*/
+			0,                         /*tp_as_buffer*/
+			Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE, /*tp_flags*/
+			dialog__doc__,             /* tp_doc */
+			0,		                     /* tp_traverse */
+			0,		                     /* tp_clear */
+			0,		                     /* tp_richcompare */
+			0,		                     /* tp_weaklistoffset */
+			0,		                     /* tp_iter */
+			0,		                     /* tp_iternext */
+			Dialog_methods,            /* tp_methods */
 			0,                         /* tp_members */
 	};
 }
